# breakpad_android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/mika/study/breakpad/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/mika/study/breakpad/: MainActivity.kt
app/src/main/java/mika/study/crashsimplenativelib/: NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
breakpad/: CMakeLists.txt  build.gradle
breakpad/src/main/: AndroidManifest.xml
breakpad/src/main/cpp/: breakpad_loader.cpp
breakpad/src/main/java/mika/study/breakpad/: BreakpadLoader.kt
breakpad/src/test/java/mika/study/breakpad/: ExampleUnitTest.kt
crashSimpleNativeLib/: build.gradle
crashSimpleNativeLib/src/androidTest/java/mika/study/crashsimplenativelib/: ExampleInstrumentedTest.kt
crashSimpleNativeLib/src/main/: AndroidManifest.xml
crashSimpleNativeLib/src/main/cpp/: CMakeLists.txt  crashsimplenativelib.cpp
crashSimpleNativeLib/src/main/java/mika/study/crashsimplenativelib/: NativeLib.kt
crashSimpleNativeLib/src/test/java/mika/study/crashsimplenativelib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
